[package]
name = "pmodenv"
version = "0.1.0"
authors = ["Hans-Christian Stadler Kleeb <hans-christian.stadler@psi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0"
clap = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
