[package]
name = "pmodenv"
version = "1.0.0"
authors = ["Hans-Christian Stadler Kleeb <hans-christian.stadler@psi.ch>"]
description = "Turns environment differences into a module file"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
text-colorizer = "1"
clap = { version = "4", features = [ "derive", "cargo", "deprecated" ] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
